Publish article: Women Build More Muscle on Half the Rapamycin Dose Men Need - 2026-02-16

--- a/content/posts/rapamycin-pearl-trial-women-benefits.mdx
+++ b/content/posts/rapamycin-pearl-trial-women-benefits.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Women Build More Muscle on Half the Rapamycin Dose Men Need"
-description: "PEARL trial reveals gender differences in rapamycin's anti-aging effects"
-date: "2026-02-12"
-category: "Clinical Trial"
+title: Women Build More Muscle on Half the Rapamycin Dose Men Need
+description: PEARL trial reveals gender differences in rapamycin's anti-aging effects
+date: '2026-02-16'
+category: Clinical Trial
 featured: false
-author: "Longevity Leak Research Team"
-studyUrl: "https://pubmed.ncbi.nlm.nih.gov/40188830/"
+author: Longevity Leak Research Team
+studyUrl: https://pubmed.ncbi.nlm.nih.gov/40188830/
+published: true
 ---
-
 # Women Build More Muscle on Half the Rapamycin Dose Men Need
 
 ## Key Findings
