Publish article: Mayo Clinic Removes Zombie Cells to Rebuild Bones in 70+ Women - 2026-02-16

--- a/content/posts/senolytics-bone-density-mayo-clinic.mdx
+++ b/content/posts/senolytics-bone-density-mayo-clinic.mdx
@@ -1,13 +1,13 @@
 ---
-title: "Mayo Clinic Removes Zombie Cells to Rebuild Bones in 70+ Women"
-description: "Mayo Clinic Phase 2 trial shows Dasatinib + Quercetin improves bone health"
-date: "2026-02-12"
-category: "Clinical Trial"
+title: Mayo Clinic Removes Zombie Cells to Rebuild Bones in 70+ Women
+description: Mayo Clinic Phase 2 trial shows Dasatinib + Quercetin improves bone health
+date: '2026-02-16'
+category: Clinical Trial
 featured: false
-author: "Longevity Leak Research Team"
-studyUrl: "https://www.p05.org/longevity-treatments-in-human-trials-2024-2025/"
+author: Longevity Leak Research Team
+studyUrl: https://www.p05.org/longevity-treatments-in-human-trials-2024-2025/
+published: true
 ---
-
 # Mayo Clinic Removes Zombie Cells to Rebuild Bones in 70+ Women
 
 ## Key Findings
