Publish article: The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors - 2026-02-16

--- a/content/posts/spermidine-cardiac-disease-trial.mdx
+++ b/content/posts/spermidine-cardiac-disease-trial.mdx
@@ -1,13 +1,14 @@
 ---
-title: "The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors"
-description: "POLYCAD trial tests spermidine supplementation in 187 elderly patients with coronary artery disease"
-date: "2026-02-12"
-category: "Clinical Trial"
+title: The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors
+description: POLYCAD trial tests spermidine supplementation in 187 elderly patients
+  with coronary artery disease
+date: '2026-02-16'
+category: Clinical Trial
 featured: false
-author: "Longevity Leak Research Team"
-studyUrl: "https://link.springer.com/article/10.1186/s13063-025-09176-z"
+author: Longevity Leak Research Team
+studyUrl: https://link.springer.com/article/10.1186/s13063-025-09176-z
+published: true
 ---
-
 # The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors
 
 ## Key Findings
