Publish article: The $8 Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial) - 2026-02-16

--- a/content/posts/vitamin-d-telomere-protection-vital.mdx
+++ b/content/posts/vitamin-d-telomere-protection-vital.mdx
@@ -1,11 +1,12 @@
 ---
 title: "The $8 Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial)"
 description: "VITAL trial shows 2,000 IU daily vitamin D3 reduces telomere attrition by 140 base pairs over 4 years"
-date: "2026-02-12"
+date: "2026-02-16"
 category: "Clinical Trial"
 featured: false
 author: "Longevity Leak Research Team"
 studyUrl: "https://www.sciencedirect.com/science/article/abs/pii/S0002916525002552"
+published: true
 ---
 
 # The $8 Vitamin That Reversed 3 Years of Cellular Aging (VITAL Trial)
